--- a/src/assets/styles/particle.css
+++ b/src/assets/styles/particle.css
@@ -4,14 +4,14 @@ body{
 	font:normal 75% Arial, Helvetica, sans-serif; 
 } 
 
-canvas{ 
+canvas { 
 	display: block; 
 	vertical-align: bottom;
-	position: absolute; 
+	position: fixed; 
 	top: 0;
 	z-index: -1;
-	background-color: #222222; 
-} 
+	background-color: #222222;
+}
 
 .count-particles{ 
 	background: #000022; 
